--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shubham-agarwal-27/hooks-github-deploy-azure",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "main.js",
   "scripts": {
@@ -9,6 +9,9 @@
   "repository": {
     "type": "git",
     "url": "git://github.com/shubham-agarwal-27/hooks-github-deploy-azure.git"
+  },
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com/shubham-agarwal-27"
   },
   "author": "",
   "license": "ISC",
